--- a/newstyle.css
+++ b/newstyle.css
@@ -2,10 +2,7 @@
   display: block;
 }
 
-.selector-button__bg {
-  background: green !important;
-}
-
+/*Ссылка на профиль*/
 #application-wrapper > div > div.popup-overlay-wrapper > div.popup-overlay.visible > div > div.popup-overlay-content > div > div.ui-scroll-area > div > div.popup-component > div > div.contact-profile__content > div.contact-profile__section > button:nth-child(1) {
 	display: none !important;
 }
