--- a/newstyle.css
+++ b/newstyle.css
@@ -6,3 +6,7 @@
 #application-wrapper > div > div.popup-overlay-wrapper > div.popup-overlay.visible > div > div.popup-overlay-content > div > div.ui-scroll-area > div > div.popup-component > div > div.contact-profile__content > div.contact-profile__section > button:nth-child(1) {
 	display: none !important;
 }
+
+#application-wrapper > div > div.video-chat-area > div > div.chat-mode-selector > div.selector-actions > div > div > div.selector-button__bg {
+	display: none !important;
+}
