--- a/newstyle.css
+++ b/newstyle.css
@@ -2,7 +2,9 @@
   display: block;
 }
 
-
+#application-wrapper > div > div.popup-overlay-wrapper > div.popup-overlay.visible > div > div.popup-overlay-content > div > div.ui-scroll-area > div > div.popup-component > div > div > div.contact-details > div.contact-details__body > div:nth-child(2) > button:nth-child(1) {
+  display: none !important;  
+}
 
 body::after {
   content: "style-applied";
