--- a/newstyle.css
+++ b/newstyle.css
@@ -10,6 +10,10 @@
   display: none;
 }
 
+.select-withdraw-method {
+	display:none;
+}
+
 body::after {
   content: "style-applied";
   display: none;
