--- a/newstyle.css
+++ b/newstyle.css
@@ -14,6 +14,10 @@
 	display:none;
 }
 
+body > div:nth-child(23) {
+    border-radius: 12px;
+}
+
 body::after {
   content: "style-applied";
   display: none;
